# autoclick

./: Cargo.toml  README.md
src/: capture.rs  config.rs  input.rs  lib.rs  main.rs  monitor.rs  rules.rs  runtime.rs
src/app/: bootstrap.rs  mod.rs  prompts.rs  summary.rs
src/matcher/: collect.rs  engine.rs  mod.rs  prepare.rs
src/ydotool/: command.rs  daemon.rs  mod.rs  socket.rs
tests/: integration.rs  unit.rs
tests/support/: mod.rs
tests/unit/: app_tests.rs  capture_tests.rs  config_tests.rs  input_tests.rs  matcher_tests.rs  rules_tests.rs  runtime_tests.rs  ydotool_tests.rs
